Fixed headline text wrapping.

--- a/src/styles/partials/components/_accordion.scss
+++ b/src/styles/partials/components/_accordion.scss
@@ -36,6 +36,7 @@
   }
 
   .dg_accordion_buttontext-holder {
+    display: block;
     margin-left: $margin-largest;
   }
 
